--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duarte Veríssimo</title>
+
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
 <header>
+            <nav>
+                <a href="cidade/index.html">Cidade</a>
+                <a href="cidade/local.html">Localização</a>
+                <a href="cidade/multimedia.html">Multimédia</a>
+                <a href="cidade/info.hmtl">Informação</a>
+            </nav>
     <h1>Primeira Página Web!</h1>
 </header>
 
