--- a/cidade/index.html
+++ b/cidade/index.html
@@ -20,7 +20,7 @@
             <p>A minha cidade é muito linda!!!</p>
         </main>
         <footer>
-            <p>DIW 2025</p>
+             <p>Universidade Lusófona © 2025</p>
         </footer>
     </body>
 </html>
