--- a/cidade/info.html
+++ b/cidade/info.html
@@ -13,5 +13,9 @@
                 <a href="multimedia.html">Multimédia</a>
                 <a href="info.html">Informação</a>
             </nav><h1>Informações sobre Viseu</h1></header>
+            <footer>
+    <p>Universidade Lusófona © 2025</p>
+</footer>
+
 </body>
 </html>
