--- a/cidade/local.html
+++ b/cidade/local.html
@@ -16,5 +16,9 @@
     <h1>Onde fica Viseu ?</h1>
 </header>
 <section></section>
+<footer>
+    <p>Universidade Lusófona © 2025</p>
+</footer>
+
 </body>
 </html>
