--- a/cidade/multimedia.html
+++ b/cidade/multimedia.html
@@ -14,5 +14,10 @@
                 <a href="info.html">Informação</a>
             </nav>
         <h1>Fotos de Viseu!</h1></header>
+
+        <footer>
+    <p>Universidade Lusófona © 2025</p>
+</footer>
+
 </body>
 </html>
