--- a/cidade/index.html
+++ b/cidade/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Viseu</title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <header>
-            <nav>
-                <a href="index.html">Home</a>
+            <nav class="topnav>
+                <a href="index.html">Cidade</a>
                 <a href="local.html">Localização</a>
                 <a href="multimedia.html">Multimédia</a>
                 <a href="info.html">Informação</a>
@@ -16,8 +17,11 @@
 
         </header>
         <main>
-            <h2>Home</h2>
+            <h2>Viseu é a minha cidade</h2>
+
             <p>A minha cidade é muito linda!!!</p>
+            <img src="images/viseu.webp" alt="cidade de Viseu" width="500" height="600">
+
         </main>
         <footer>
              <p>Universidade Lusófona © 2025</p>
