--- a/cidade/info.html
+++ b/cidade/info.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />
     <title>Informações</title>
 </head>
 <body>
     <header>
-                    <nav>
-                <a href="index.html">Cidade</a>
-                <a href="local.html">Localização</a>
-                <a href="multimedia.html">Multimédia</a>
-                <a href="info.html">Informação</a>
-            </nav><h1>Informações sobre Viseu</h1></header>
-            <footer>
-    <p>Universidade Lusófona © 2025</p>
-</footer>
+        <nav>
+            <a href="index.html">Cidade</a>
+            <a href="local.html">Localização</a>
+            <a href="multimedia.html">Multimédia</a>
+            <a href="info.html">Informação</a>
+        </nav>
+        <h1>Informações sobre Viseu</h1>
+    </header>
 
+    <main>
+        <section>
+            <h2>Sobre a cidade</h2>
+            <p>Viseu é uma cidade do centro de Portugal, situada na região da Beira Alta. 
+            É conhecida pela sua ligação ao vinho do Dão, pela história romana e pelo 
+            seu centro histórico bem preservado.</p>
+        </section>
+
+        <section>
+            <h2>Pontos de interesse</h2>
+            <ul>
+                <li>Catedral de Viseu (Sé)</li>
+                <li>Museu Nacional Grão Vasco</li>
+                <li>Parque do Fontelo</li>
+                <li>Centro histórico</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Curiosidade</h2>
+            <p>Viseu é frequentemente chamada de "Cidade Jardim" devido à sua qualidade 
+            de vida e aos muitos espaços verdes.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>Universidade Lusófona © 2025</p>
+    </footer>
 </body>
 </html>
