--- a/cidade/local.html
+++ b/cidade/local.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />~
+
     <title>Localização</title>
 </head>
 <body>
@@ -15,7 +17,9 @@
             </nav>
     <h1>Onde fica Viseu ?</h1>
 </header>
-<section></section>
+<section>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96837.85410182155!2d-8.051425559710928!3d40.66993794287324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd23363eebc35ccd%3A0xf6bfc08821e7449a!2sViseu!5e0!3m2!1sen!2spt!4v1757530436607!5m2!1sen!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
 <footer>
     <p>Universidade Lusófona © 2025</p>
 </footer>
