--- a/cidade/index.html
+++ b/cidade/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Viseu</title>
-        <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     </head>
     <body>
         <header>
@@ -20,7 +20,7 @@
             <h2>Viseu é a minha cidade</h2>
 
             <p>A minha cidade é muito linda!!!</p>
-            <img src="images/viseu.webp" alt="cidade de Viseu" width="500" height="600">
+            <img src="/images/viseu.webp" alt="cidade de Viseu" width="500" height="600">
 
         </main>
         <footer>
