--- a/cidade/multimedia.html
+++ b/cidade/multimedia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Multimédia</title>
 </head>
 <body>
@@ -16,8 +16,8 @@
             </nav>
         <h1>Fotos de Viseu!</h1>
     </header>
-        <section><img src="images/viseu-1.jpg" alt="Desenvolvimento de Interfaces Web" style="border:1px yellow solid; border-radius: 2px;"></section>
-        <footer>
+        <section><img src="/images/viseu-1.jpg" alt="Desenvolvimento de Interfaces Web" style="border:1px yellow solid; border-radius: 2px;"></section>
+<footer>
     <p>Universidade Lusófona © 2025</p>
 </footer>
 
