Pequenas alterações visuais, correção de fecho de aspas no atributo class "topnav"

--- a/cidade/info.html
+++ b/cidade/info.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">Cidade</a>
-            <a href="local.html">Localização</a>
-            <a href="multimedia.html">Multimédia</a>
-            <a href="info.html">Informação</a>
-        </nav>
+            <nav class="topnav">
+                <a href="index.html">Cidade</a>
+                <a href="local.html">Localização</a>
+                <a href="multimedia.html">Multimédia</a>
+                <a href="info.html">Informação</a>
+            </nav>
         <h1>Informações sobre Viseu</h1>
     </header>
 
@@ -39,6 +39,12 @@
             <h2>Curiosidade</h2>
             <p>Viseu é frequentemente chamada de "Cidade Jardim" devido à sua qualidade 
             de vida e aos muitos espaços verdes.</p>
+        </section>
+
+        <section><p>Sabe mais sobre a cidade de Viseu em:
+            <a href="https://www.cm-viseu.pt/pt/" target="_blank"> www.cm-viseu.pt</a>
+        </p>
+        
         </section>
     </main>
 
