--- a/cidade/multimedia.html
+++ b/cidade/multimedia.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-            <nav>
+            <nav class="topnav">
                 <a href="index.html">Cidade</a>
                 <a href="local.html">Localização</a>
                 <a href="multimedia.html">Multimédia</a>
