--- a/cidade/index.html
+++ b/cidade/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <nav class="topnav>
+            <nav class="topnav">
                 <a href="index.html">Cidade</a>
                 <a href="local.html">Localização</a>
                 <a href="multimedia.html">Multimédia</a>
@@ -17,11 +17,11 @@
 
         </header>
         <main>
+            <section>
             <h2>Viseu é a minha cidade</h2>
-
             <p>A minha cidade é muito linda!!!</p>
             <img src="/images/viseu.webp" alt="cidade de Viseu" width="500" height="600">
-
+</section>
         </main>
         <footer>
              <p>Universidade Lusófona © 2025</p>
