--- a/cidade/local.html
+++ b/cidade/local.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-            <nav>
+            <nav class="topnav">
                 <a href="index.html">Cidade</a>
                 <a href="local.html">Localização</a>
                 <a href="multimedia.html">Multimédia</a>
