--- a/lab1/multimedia.html
+++ b/lab1/multimedia.html
@@ -16,7 +16,10 @@
             </nav>
         <h1>Fotos de Viseu!</h1>
     </header>
-        <section><img src="/images/viseu-1.jpg" alt="Desenvolvimento de Interfaces Web" style="border:1px yellow solid; border-radius: 2px;"></section>
+    <main>
+ <section><img src="/images/viseu-1.jpg" alt="Desenvolvimento de Interfaces Web" style="border:1px yellow solid; border-radius: 2px;"></section>
+    </main>
+       
 <footer>
     <p>Universidade Lusófona © 2025</p>
 </footer>
