--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <header>
             <nav>
-                <a href="cidade/index.html">Cidade</a>
-                <a href="cidade/local.html">Localização</a>
-                <a href="cidade/multimedia.html">Multimédia</a>
-                <a href="cidade/info.hmtl">Informação</a>
+                <ul>
+                    <li><a href="lab1/index.html">Lab1</a></li>
+                    <li><a href="lab2/index.html">Lab2</a></li>
+                </ul>
             </nav>
     <h1>Primeira Página Web!</h1>
 </header>
@@ -22,7 +22,7 @@
     <p>Eis a minha primeira página Web!</p>
     <p>
         Na Unidade Curricular de 
-        <a href="https://moodle.ensinolusofona.pt/course/view.php?id=11232">
+        <a href="https://moodle.ensinolusofona.pt/course/view.php?id=11232" target="_blank">
             Desenvolvimento de Interfaces Web
         </a>
         abordaremos as seguintes tecnologias Web &#127760;:
@@ -34,7 +34,7 @@
         <li>React e Next.js</li>
     </ul>
     <p>Iremos criar soluções criativas!</p>
-    <img src="images/image.svg" alt="Desenvolvimento de Interfaces Web">
+    <img src="images/image.svg" alt="Desenvolvimento de Interfaces Web" class="img-worldcloud">
 </main>
 
 <footer>
