--- a/lab2/local.html
+++ b/lab2/local.html
@@ -18,6 +18,8 @@
     <h1>Onde fica Viseu ?</h1>
 </header>
 <main>
+    <h2>Localização</h2>
+    <p>Viseu é uma cidade situada no centro de Portugal, conhecida pela sua rica herança histórica e cultural. Rodeada por paisagens naturais e vinhas da região do Dão, destaca-se pelo centro histórico bem preservado, com ruas de calçada, igrejas antigas e o imponente Sé Catedral de Viseu. É também um importante polo económico e educativo da região, oferecendo uma excelente qualidade de vida.</p>
 <section>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96837.85410182155!2d-8.051425559710928!3d40.66993794287324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd23363eebc35ccd%3A0xf6bfc08821e7449a!2sViseu!5e0!3m2!1sen!2spt!4v1757530436607!5m2!1sen!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
