--- a/lab2/info.html
+++ b/lab2/info.html
@@ -1,28 +1,55 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Informações</title>
+
 </head>
 <body>
     <header>
-            <nav class="topnav">
-                <a href="index.html">Cidade</a>
-                <a href="local.html">Localização</a>
-                <a href="multimedia.html">Multimédia</a>
-                <a href="info.html">Informação</a>
-            </nav>
+        <nav class="topnav">
+            <a href="index.html">Cidade</a>
+            <a href="local.html">Localização</a>
+            <a href="multimedia.html">Multimédia</a>
+            <a href="info.html">Informação</a>
+        </nav>
         <h1>Informações sobre Viseu</h1>
     </header>
 
     <main>
         <section>
-            <h2>Sobre a cidade</h2>
+            <h2>Informações</h2>
             <p>Viseu é uma cidade do centro de Portugal, situada na região da Beira Alta. 
             É conhecida pela sua ligação ao vinho do Dão, pela história romana e pelo 
             seu centro histórico bem preservado.</p>
+            
+            <table>
+                <thead>
+                    <tr>
+                        <th>Demografia</th>
+                        <th>População</th>
+                        <td>50.848 hab (2021)</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td rowspan="2">Geografia</td>
+                        <th>Área</th>
+                        <td>51,004 km²</td>
+                    </tr>
+                    <tr>
+                        <th>Região</th>
+                        <td>Centro</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">Website</td>
+                        <td><a href="https://www.cm-viseu.pt/pt/" target="_blank">www.cm-viseu.pt</a></td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <section>
@@ -39,12 +66,6 @@
             <h2>Curiosidade</h2>
             <p>Viseu é frequentemente chamada de "Cidade Jardim" devido à sua qualidade 
             de vida e aos muitos espaços verdes.</p>
-        </section>
-
-        <section><p>Sabe mais sobre a cidade de Viseu em:
-            <a href="https://www.cm-viseu.pt/pt/" target="_blank"> www.cm-viseu.pt</a>
-        </p>
-        
         </section>
     </main>
 
