--- a/lab2/multimedia.html
+++ b/lab2/multimedia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Multimédia</title>
     
 <style>
@@ -34,8 +34,13 @@
     <main>
         <h2>Multimédia</h2>
         <p>Nesta página encontra conteúdos multimédia</p>
+        <p>
+            <a href="#fotografia">Fotografias</a>
+            <a href="#video">Vídeo</a>
+            <a href="#poesia">Poesia</a>
+        </p>
  <section>
-    <h3>Fotografias</h3>
+    <h3 id="fotografia">Fotografias</h3>
     <div class="fotografias">
 
     <img src="/images/lx1.webp" alt="vista cidade">
@@ -51,12 +56,12 @@
 </section>
 
 <section>
-    <h3>Vídeo</h3>
+    <h3 id="video">Vídeo</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/vzzNr6FnoSI?si=O9QQ4PoNQNUCRQ-j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 
 <section>
-    <h3>Poesia</h3>
+    <h3 id="poesia">Poesia</h3>
     <div>
         <p>
             Entre vales de verde encanto,<br>
@@ -79,4 +84,5 @@ Terra de alma, cultura e paixão. <br>
 </footer>
 
 </body>
-</html>
+</html> 
+
