--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             <h3>Lab 3</h3>
             <p>Flex & Grid</p>
         </a>
+                <a class="card" href="lab4/index.html">
+            <h3>Lab 4</h3>
+            <p>JavaScript</p>
+        </a>
     </div>
 </section>
 
