--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
             <h3>Lab 3</h3>
             <p>Flex & Grid</p>
         </a>
-                <a class="card" href="lab4/index.html">
+        <a class="card" href="lab4/index.html">
             <h3>Lab 4</h3>
             <p>JavaScript</p>
+        </a>
+        <a class="card" href="lab5/index.html">
+            <h3>Lab 5</h3>
+            <p>JavaScript2</p>
         </a>
     </div>
 </section>
