--- a/lab5/index.html
+++ b/lab5/index.html
@@ -45,6 +45,40 @@ div{
             <button id="btnAdicionar">Conta!</button>
             <p id="counter">33</p>
         </div>
+
+
+<div style="display: flex; justify-content: flex-start; gap:20px">
+  <p class="cortxt2">6. Uma frase a seu gosto!</p>
+  <button class="color" data-color="orange">Orange</button>
+  <button class="color" data-color="yellow">Yellow</button>
+  <button class="color" data-color="purple">Purple</button>
+</div>
+
+<div>
+  <p>7. Escolha uma cor</p>
+  <select class="selectCor">
+    <option value="">Selecione uma cor</option>
+    <option value="red">Vermelho</option>
+    <option value="blue">Azul</option>
+    <option value="green">Verde</option>
+  </select>
+</div>
+
+<div style="display: flex; justify-content: flex-start; align-items: center ; gap:20px">
+    <p>8.</p>
+<form>
+    <input id="nome" type="text" placeholder="insira o seu nome">
+    <input id="idade" type="number" placeholder="insira a sua idade">
+    <input type="submit">
+</form>
+<p class="msgForm"></p>
+</div>
+
+<div style="display: flex; justify-content: flex-start; align-items: center ; gap:20px">
+    <p>9. Automatic Counter:</p>
+    <p class="counterAuto"></p>
+</div>
+
     </main>
     <footer>
 
