--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
             <h3>Lab 5</h3>
             <p>JavaScript2</p>
         </a>
+                <a class="card" href="lab6/index.html">
+            <h3>Lab 6</h3>
+            <p>Loja Online</p>
+        </a>
     </div>
 </section>
 
