--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
             <h3>Lab 5</h3>
             <p>JavaScript2</p>
         </a>
-                <a class="card" href="lab6/index.html">
+
+        <a class="card" href="lab6/index.html">
             <h3>Lab 6</h3>
+            <p>Loja Online</p>
+        </a>
+                
+        <a class="card" href="lab7/index.html">
+            <h3>Lab 7</h3>
             <p>Loja Online</p>
         </a>
     </div>
